--- a/TheVidStore/TheVidStore.csproj
+++ b/TheVidStore/TheVidStore.csproj
@@ -218,6 +218,26 @@
     <Compile Include="Migrations\201612221741232_AddMembershipType.Designer.cs">
       <DependentUpon>201612221741232_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612221746391_populateMembershipTypes.cs" />
+    <Compile Include="Migrations\201612221746391_populateMembershipTypes.Designer.cs">
+      <DependentUpon>201612221746391_populateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612221757069_applyannotaionstoCustomerName.cs" />
+    <Compile Include="Migrations\201612221757069_applyannotaionstoCustomerName.Designer.cs">
+      <DependentUpon>201612221757069_applyannotaionstoCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612231212513_AddedDbMovies.cs" />
+    <Compile Include="Migrations\201612231212513_AddedDbMovies.Designer.cs">
+      <DependentUpon>201612231212513_AddedDbMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612231231219_AddedDbMovies1.cs" />
+    <Compile Include="Migrations\201612231231219_AddedDbMovies1.Designer.cs">
+      <DependentUpon>201612231231219_AddedDbMovies1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612231235103_AddedDb.cs" />
+    <Compile Include="Migrations\201612231235103_AddedDb.Designer.cs">
+      <DependentUpon>201612231235103_AddedDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -308,6 +328,8 @@
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\customer\Details.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\customer\Index.cshtml" />
+    <Content Include="Views\customer\Det.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -330,6 +352,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612221741232_AddMembershipType.resx">
       <DependentUpon>201612221741232_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612221746391_populateMembershipTypes.resx">
+      <DependentUpon>201612221746391_populateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612221757069_applyannotaionstoCustomerName.resx">
+      <DependentUpon>201612221757069_applyannotaionstoCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612231212513_AddedDbMovies.resx">
+      <DependentUpon>201612231212513_AddedDbMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612231231219_AddedDbMovies1.resx">
+      <DependentUpon>201612231231219_AddedDbMovies1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612231235103_AddedDb.resx">
+      <DependentUpon>201612231235103_AddedDb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
