--- a/TheVidStore/TheVidStore.csproj
+++ b/TheVidStore/TheVidStore.csproj
@@ -238,6 +238,14 @@
     <Compile Include="Migrations\201612231235103_AddedDb.Designer.cs">
       <DependentUpon>201612231235103_AddedDb.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612231546310_xyz.cs" />
+    <Compile Include="Migrations\201612231546310_xyz.Designer.cs">
+      <DependentUpon>201612231546310_xyz.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612240940162_AddedNameToMembershipType.cs" />
+    <Compile Include="Migrations\201612240940162_AddedNameToMembershipType.Designer.cs">
+      <DependentUpon>201612240940162_AddedNameToMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -330,6 +338,7 @@
     <Content Include="Views\Movies\Random.cshtml" />
     <Content Include="Views\customer\Index.cshtml" />
     <Content Include="Views\customer\Det.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -367,6 +376,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612231235103_AddedDb.resx">
       <DependentUpon>201612231235103_AddedDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612231546310_xyz.resx">
+      <DependentUpon>201612231546310_xyz.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612240940162_AddedNameToMembershipType.resx">
+      <DependentUpon>201612240940162_AddedNameToMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
