fuckup the application trying to make it better

--- a/TheVidStore/TheVidStore.csproj
+++ b/TheVidStore/TheVidStore.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\NewMovieViewModel.cs" />
     <Compile Include="ErrorHandler\AiHandleErrorAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -246,6 +247,10 @@
     <Compile Include="Migrations\201612240940162_AddedNameToMembershipType.Designer.cs">
       <DependentUpon>201612240940162_AddedNameToMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612241555053_changesincustomer.cs" />
+    <Compile Include="Migrations\201612241555053_changesincustomer.Designer.cs">
+      <DependentUpon>201612241555053_changesincustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -256,6 +261,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ByIdViewModel.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -339,6 +345,8 @@
     <Content Include="Views\customer\Index.cshtml" />
     <Content Include="Views\customer\Det.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\customer\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\Det.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -382,6 +390,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612240940162_AddedNameToMembershipType.resx">
       <DependentUpon>201612240940162_AddedNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612241555053_changesincustomer.resx">
+      <DependentUpon>201612241555053_changesincustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
