--- a/TheVidStore/TheVidStore.csproj
+++ b/TheVidStore/TheVidStore.csproj
@@ -266,12 +266,25 @@
     <Compile Include="Migrations\201701091810097_ChangedDateTime.Designer.cs">
       <DependentUpon>201701091810097_ChangedDateTime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701211731256_AddedDateTimeToMovie.cs" />
+    <Compile Include="Migrations\201701211731256_AddedDateTimeToMovie.Designer.cs">
+      <DependentUpon>201701211731256_AddedDateTimeToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701211856513_strangechanges.cs" />
+    <Compile Include="Migrations\201701211856513_strangechanges.Designer.cs">
+      <DependentUpon>201701211856513_strangechanges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701220458543_shithappend.cs" />
+    <Compile Include="Migrations\201701220458543_shithappend.Designer.cs">
+      <DependentUpon>201701220458543_shithappend.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -422,6 +435,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701091810097_ChangedDateTime.resx">
       <DependentUpon>201701091810097_ChangedDateTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701211731256_AddedDateTimeToMovie.resx">
+      <DependentUpon>201701211731256_AddedDateTimeToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701211856513_strangechanges.resx">
+      <DependentUpon>201701211856513_strangechanges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701220458543_shithappend.resx">
+      <DependentUpon>201701220458543_shithappend.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
