--- a/TheVidStore/Web.config
+++ b/TheVidStore/Web.config
@@ -12,18 +12,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TheVidStore-20161221112608.mdf;Initial Catalog=aspnet-TheVidStore-20161221112608;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
-    <add key ="Microsoftid" value="5f5b5bd9-f88a-4ad4-ba1a-c7b7d6214538"/>
-    <add key="Microsoftkey" value="aOmAstd9Kgf7USyT8kgMXMD"/>
-    <add key="Facebookid" value="577460095776908"/>
-    <add key="Facebookkey" value="abb57b3584ee9f9c07d9a49358d3bfaa"/>
-    <add key="Googleid" value="485804783617-fh2gr6ju7qjp6hoe2bq7489gf7db81dp.apps.googleusercontent.com"/>
-    <add key="Googlekey" value="OixXNJJmYWRjXEy3B6-vgYQu"/>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation targetFramework="4.6.1" debug="true" />
