--- a/TheVidStore/TheVidStore.csproj
+++ b/TheVidStore/TheVidStore.csproj
@@ -681,6 +681,7 @@
     <Content Include="Views\customer\CustomerForm.cshtml" />
     <Content Include="Views\Movies\ReadOnlyList.cshtml" />
     <Content Include="Views\Rentals\New.cshtml" />
+    <Content Include="AppSettings.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
